# ms-fabric-stock-prediction-pipeline

./: .gitignore  README.md  pyproject.toml
config/: config.json
data/bronze/stocks/: data.parquet
data/bronze/stocks/stock_data/: data.parquet
data/gold/backtest_results/: backtest_summary.csv  backtest_trades.csv
data/gold/monte_carlo/: detailed_statistics.json  monte_carlo_summary.csv  price_classification.csv
data/gold/predictions/: MSFT_latest.parquet  MSFT_predictions.parquet
data/gold/stocks/: msft_features.parquet
data/silver/stocks/: msft_silver.parquet
models/: msft_xgboost_classifier.pkl
notebooks/: 01_data_ingestion.ipynb  02_data_transformation.ipynb  03_feature_engineering.ipynb  04_model_training.ipynb  05_prediction.ipynb  06_monte_carlo.ipynb  07_backtest.ipynb
utils/: __init__.py  data_loader.py  indicators.py  models.py  monte_carlo.py
